kubernetes/core/docs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mkdocs-nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "415"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`docs.bhamm-lab.com`)
      kind: Rule
      middlewares:
        - name: default-headers
      services:
        - name: mkdocs-nginx-service
          port: 80
  tls:
    secretName: bhamm-lab-tls
